--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -1,24 +1,28 @@
-[tool.poetry]
+[project]
 name = "{{ cookiecutter.project_slug }}"
 version = "0.1.0"
 description = ""
-authors = ["{{ cookiecutter.author_name }}"]
-packages = [
-    { include = "{{ cookiecutter.project_slug }}", from = "src" }
+authors = [{ name = "{{ cookiecutter.author_name }}" }]
+requires-python = ">={{ cookiecutter.python_version }}"
+dependencies = [
+    "pandas",
+    "numpy",
+    "jupyter",
+    "matplotlib",
+    "seaborn",
+    "ipykernel",
 ]
 
-[tool.poetry.dependencies]
-python = "^{{ cookiecutter.python_version }}"
-pandas = "*"
-numpy = "*"
-jupyter = "*"
-matplotlib = "*"
-seaborn = "*"
-
-[tool.poetry.dev-dependencies]
-black = "*"
-isort = "*"
+[project.optional-dependencies]
+dev = [
+    "black",
+    "isort",
+    "pre-commit",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/{{ cookiecutter.project_slug }}"]
